--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.13",
+    "tailwindcss": "^4.0.13",
     "vite": "^6.1.0"
   }
 }
